Add users report

--- a/front/src/app/components/private/admin/components/manage-users/manage-users.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/manage-users.component.html
@@ -14,6 +14,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/auth/admin/manage/user" routerLinkActive="active">Usuarios</a>
         </li>
+        <li>
+          <app-users-report></app-users-report>
+        </li>
       </ul>
     </div>
     <div class="card-body">
