--- a/front/src/app/components/private/admin/components/manage-users/manage-users.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/manage-users.component.html
@@ -1,6 +1,7 @@
 <div class="container mt-5">
   <h1>Administración de Usuarios</h1>
-  <div class="card">
+  <app-users-report></app-users-report>
+  <div class="card mt-2">
     <div class="card-header">
       <ul class="nav nav-pills card-header-pills">
         <li class="nav-item">
@@ -13,9 +14,6 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/auth/admin/manage/user" routerLinkActive="active">Usuarios</a>
-        </li>
-        <li>
-          <app-users-report></app-users-report>
         </li>
       </ul>
     </div>
