Fix update date with gtm-5

--- a/front/src/app/components/private/admin/components/manage-users/manage-users.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/manage-users.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <h1>Administración de Usuarios</h1>
   <app-users-report></app-users-report>
-  <div class="card mt-2">
+  <div class="card mt-2 mb-2">
     <div class="card-header">
       <ul class="nav nav-pills card-header-pills">
         <li class="nav-item">
