--- a/front/src/app/components/private/admin/components/manage-users/components/users-report/users-report.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/users-report/users-report.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary" (click)="downloadUserReport()">Descargar Reporte de Usuarios</button>
+<button class="btn btn-primary" (click)="downloadUserReport()">Descargar Reporte de Actualización de Información</button>
