Fix label input in info request credit form

--- a/front/src/app/components/private/user/request/request-credit/info-request-credit/info-request-credit.component.html
+++ b/front/src/app/components/private/user/request/request-credit/info-request-credit/info-request-credit.component.html
@@ -254,7 +254,7 @@
               />
             </div>
             <div class="col-md-6">
-              <label for="duracionAntigVivienda" class="form-label">Antigüedad en la empresa</label>
+              <label for="duracionAntigVivienda" class="form-label">Antigüedad en la vivienda</label>
               <div class="input-group mb-3">
                 <input type="number" class="form-control" formControlName="duracionAntigVivienda">
                 <select class="form-select" style="max-width: 220px;" formControlName="periodoAntigVivienda">
