--- a/front/src/app/components/public/agreements/agreements.component.html
+++ b/front/src/app/components/public/agreements/agreements.component.html
@@ -11,7 +11,7 @@
     <h2 class="fw-bold mt-3">Categorías</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 g-4">
         <div class="col">
-            <a routerLink="/services/credits">
+            <a routerLink="/agreements/vehicles">
                 <div class="card h-100 shadow text-center">
                     <i class="bi bi-car-front-fill"></i>
                     <div class="card-body pt-0">
@@ -21,7 +21,7 @@
             </a>
         </div>
         <div class="col">
-            <a routerLink="/services/credits">
+            <a routerLink="/agreements/opticals">
                 <div class="card h-100 shadow text-center">
                     <i class="bi bi-sunglasses"></i>
                     <div class="card-body pt-0">
@@ -31,7 +31,7 @@
             </a>
         </div>
         <div class="col">
-            <a routerLink="/services/credits">
+            <a routerLink="/agreements/home-technology">
                 <div class="card h-100 shadow text-center">
                     <i class="bi bi-house-up-fill"></i>
                     <div class="card-body pt-0">
@@ -41,7 +41,7 @@
             </a>
         </div>
         <div class="col">
-            <a routerLink="/services/credits">
+            <a routerLink="/agreements/entertainment">
                 <div class="card h-100 shadow text-center">
                     <i class="bi bi-film"></i>
                     <div class="card-body pt-0">
@@ -51,11 +51,91 @@
             </a>
         </div>
         <div class="col">
-            <a routerLink="/services/credits">
+            <a routerLink="/agreements/family-basket">
                 <div class="card h-100 shadow text-center">
                     <i class="bi bi-shop"></i>
                     <div class="card-body pt-0">
                         <h5 class="card-title">Canasta Familiar</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/agreements/odontology">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-emoji-laughing"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Odontología</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/agreements/healthy-life">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-shop"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Vida Saludable</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/agreements/education">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-book-half"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/agreements/clothes">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-shop"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Prendas de vestir</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/agreements/technician-mechanics">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-gear"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Técnico-Mecánica</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/agreements/driving">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-shop"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Conducción</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/agreements/health-care-prepayment">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-bandaid"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Medicina Prepagada</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/agreements/funeral-insurance">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-shop"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Seguros Funerarios</h5><i class="bi bi-arrow-right-square-fill"></i>
                     </div>
                 </div>
             </a>
