Update card icons

--- a/front/src/app/components/public/agreements/agreements.component.html
+++ b/front/src/app/components/public/agreements/agreements.component.html
@@ -73,7 +73,7 @@
         <div class="col">
             <a routerLink="/agreements/healthy-life">
                 <div class="card h-100 shadow text-center">
-                    <i class="bi bi-shop"></i>
+                    <i class="bi bi-heart-pulse"></i>
                     <div class="card-body pt-0">
                         <h5 class="card-title">Vida Saludable</h5><i class="bi bi-arrow-right-square-fill"></i>
                     </div>
@@ -93,7 +93,7 @@
         <div class="col">
             <a routerLink="/agreements/clothes">
                 <div class="card h-100 shadow text-center">
-                    <i class="bi bi-shop"></i>
+                    <i class="bi bi-person-standing-dress"></i>
                     <div class="card-body pt-0">
                         <h5 class="card-title">Prendas de vestir</h5><i class="bi bi-arrow-right-square-fill"></i>
                     </div>
@@ -113,7 +113,7 @@
         <div class="col">
             <a routerLink="/agreements/driving">
                 <div class="card h-100 shadow text-center">
-                    <i class="bi bi-shop"></i>
+                    <i class="bi bi-person-vcard"></i>
                     <div class="card-body pt-0">
                         <h5 class="card-title">Conducción</h5><i class="bi bi-arrow-right-square-fill"></i>
                     </div>
@@ -133,7 +133,7 @@
         <div class="col">
             <a routerLink="/agreements/funeral-insurance">
                 <div class="card h-100 shadow text-center">
-                    <i class="bi bi-shop"></i>
+                    <i class="bi bi-file-earmark-medical"></i>
                     <div class="card-body pt-0">
                         <h5 class="card-title">Seguros Funerarios</h5><i class="bi bi-arrow-right-square-fill"></i>
                     </div>
