Add agreements text

--- a/front/src/app/components/public/agreements/agreements.component.html
+++ b/front/src/app/components/public/agreements/agreements.component.html
@@ -2,11 +2,7 @@
     <h1 class="text-center fw-bold mt-3">Convenios</h1>
     <app-agreements-carousel></app-agreements-carousel>
     <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero tempora ducimus ab, accusantium necessitatibus
-        commodi quas maxime harum et expedita quibusdam hic consequatur maiores nisi, labore deserunt aliquam pariatur
-        similique.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos tenetur quidem, cum id beatae tempore
-        soluta optio natus voluptates saepe eius. Ipsa minus laborum, quas nisi unde molestiae ab earum.
+        Los convenios de FemSeapto son alianzas estratégicas con empresas y entidades que buscan brindar beneficios exclusivos a nuestros asociados y sus familias. A través de estos acuerdos, puedes acceder a descuentos especiales, opciones de financiación y servicios preferenciales en áreas clave como salud, educación, tecnología, hogar, entretenimiento y más. Estos convenios están diseñados para facilitar el acceso a productos y servicios esenciales, ayudándote a optimizar tu presupuesto y mejorar tu calidad de vida. Aprovecha las ventajas que FemSeapto ha gestionado pensando en ti y en tu bienestar integral.
     </p>
     <h2 class="fw-bold mt-3">Categorías</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 g-4">
