Add jszip and report working

--- a/front/src/app/components/private/admin/users-report/components/users-info-filter/users-info-filter.component.html
+++ b/front/src/app/components/private/admin/users-report/components/users-info-filter/users-info-filter.component.html
@@ -27,10 +27,10 @@
   <button
     pButton
     type="button"
-    label="Generar Excel"
-    icon="pi pi-file-excel"
+    label="Generar Reporte"
+    icon="pi pi-file"
     class="p-button-success"
-    (click)="generateExcelForUsers()"
+    (click)="generateZipForUsers()"
     [disabled]="users.length === 0"
   ></button>
 </div>
