Add user report search and fix some fields

--- a/front/src/app/components/private/admin/users-report/components/users-info-filter/users-info-filter.component.html
+++ b/front/src/app/components/private/admin/users-report/components/users-info-filter/users-info-filter.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-3">
-  <h3>Formato contrapartes por intervalo de fechas</h3>
+  <h4>Generar reportes por intervalo de fechas</h4>
   <div class="date-filter">
     <p-calendar
       [(ngModel)]="startDate"
