--- a/front/src/app/components/private/admin/users-report/users-report.component.html
+++ b/front/src/app/components/private/admin/users-report/users-report.component.html
@@ -1,2 +1,14 @@
-<app-users-info-filter></app-users-info-filter>
-<app-users-search></app-users-search>
+<div class="container mt-5 mb-5">
+    <h3>Reportes de formulario de Conocimiento y Vinculación de Contrapartes</h3>
+    <div class="card">
+        <div class="card-body">
+            <app-users-info-filter></app-users-info-filter>
+        </div>
+    </div>
+    <br>
+    <div class="card">
+        <div class="card-body">
+            <app-users-search></app-users-search>
+        </div>
+    </div>
+</div>
