Change some fields to models and components

--- a/front/src/app/components/private/admin/users-report/components/users-search/users-search.component.html
+++ b/front/src/app/components/private/admin/users-report/components/users-search/users-search.component.html
@@ -29,4 +29,7 @@
             </button>
         </div>
     </div>
+    <div *ngIf="showNotFoundMessage" class="alert alert-warning mt-3" role="alert">
+        No se encontró información para el número de documento ingresado.
+    </div>
 </div>
