--- a/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
+++ b/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
@@ -30,15 +30,14 @@
             </div>
         </div>
 
-        <!-- Card de Informes -->
+        <!-- Card de Reportes -->
         <div class="col-lg-6 col-md-6 col-sm-6 col-12 mb-3">
             <div class="card shadow h-100">
                 <h4 class="card-header text-center">
-                    Informes, Actas de Junta y Comité
+                    Reportes
                 </h4>
                 <div class="card-body d-flex justify-content-center align-items-center">
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/upload">Subir Informes</a>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/download">Descargar Informes</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/reports">Actualización de datos</a>
                 </div>
             </div>
         </div>
@@ -63,6 +62,19 @@
                 </h4>
                 <div class="card-body d-flex justify-content-center align-items-center">
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/upload-data">Cargar Archivos Planos</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card de Informes -->
+        <div class="col-lg-6 col-md-6 col-sm-6 col-12 mb-3">
+            <div class="card shadow h-100">
+                <h4 class="card-header text-center">
+                    Informes, Actas de Junta y Comité
+                </h4>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/upload">Subir Informes</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/download">Descargar Informes</a>
                 </div>
             </div>
         </div>
