Add required saving lines and balances components

--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -153,6 +153,9 @@
               <li>
                 <a routerLink="/auth/user/savings/balance" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Validar Saldos de Ahorros</a>
               </li>
+              <li>
+                <a routerLink="/auth/user/savings/required-balance" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Validar Saldos de Ahorros Obligatorios</a>
+              </li>
             </ul>
           </div>
         </li>
@@ -321,6 +324,9 @@
           </li>
           <li>
             <a routerLink="/auth/user/savings/balance" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Validar saldos de ahorros</a>
+          </li>
+          <li>
+            <a routerLink="/auth/user/savings/required-balance" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Validar saldos de ahorros obligatorios</a>
           </li>
         </ul>
       </div>
