Finish update date to user info.

--- a/front/src/app/components/private/user/components/user-info/user-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/user-info.component.html
@@ -67,7 +67,7 @@
         data-bs-parent="#accordionExample"
       >
         <div class="accordion-body">
-          <app-financial-info></app-financial-info>
+          <app-financial-info [actualizarPerfilFecha]="true"></app-financial-info>
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
         data-bs-parent="#accordionExample"
       >
         <div class="accordion-body">
-          <app-family-information></app-family-information>
+          <app-family-information [actualizarPerfilFecha]="true"></app-family-information>
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
         data-bs-parent="#accordionExample"
       >
         <div class="accordion-body">
-          <app-recommendation></app-recommendation>
+          <app-recommendation [actualizarPerfilFecha]="true"></app-recommendation>
         </div>
       </div>
     </div>
