--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.css
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.css
@@ -15,3 +15,20 @@ h1 {
   color: #00823d;
   font-weight: bold;
 }
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media (min-width: 768px) {
+  .input-container {
+    flex-direction: row;
+  }
+}
+
+.input-item {
+  flex: 1;
+  min-width: 150px;
+}
