--- a/front/src/app/components/private/user/request/request-saving-withdrawal/request-saving-withdrawal.component.html
+++ b/front/src/app/components/private/user/request/request-saving-withdrawal/request-saving-withdrawal.component.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-          <button class="btn btn-primary" [disabled]="savingWdRequestForm.invalid  || isAdditionalDisabled" type="submit">
+          <button class="btn btn-primary" [disabled]="savingWdRequestForm.invalid  || isAdditionalDisabled || isLoading" type="submit">
             <span *ngIf="!isLoading">Enviar solicitud</span>
             <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
             <span *ngIf="isLoading"> Enviando...</span>
